# rag-pgvector

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  tag-release.yml
app/: __init__.py  chunking.py  citations.py  embeddings.py  errors.py  llm.py  main.py  migrations.py  rerank.py  settings.py  store.py
app/api/: deps.py
app/api/routes/: health.py  ingest.py  query.py  stats.py
app/core/: errors.py  logging.py  middleware.py  security.py  settings.py
app/db/: migrations.py  store.py
app/schemas/: __init__.py
app/services/: chunking.py  citations.py  embeddings.py  extract.py  ingest.py  llm.py  reindex.py  rerank.py  textnorm.py  watcher.py
data/: llm_gateway_patterns.md  lokalnyj_poisk.md  mcp_protocol.md  pgvector_internals.md  rag_architecture.md
evals/: golden.jsonl  run_evals.py
evals/promptfoo/: corpus.json  promptfooconfig.yaml  run.sh
migrations/: 001_init.sql  002_hnsw.sql  003_fts.sql  004_document_id_index.sql  005_source_tags.sql  006_hnsw_tuning.sql  007_russian_fts.sql  008_index_meta.sql
tests/: conftest.py  test_api.py  test_chunking.py  test_citations.py  test_embeddings.py  test_evals.py  test_file_ingest.py  test_grounded_llm.py  test_local_first.py  test_pgvector_deep.py  test_pgvector_store.py  test_prompt_security.py  test_reindex.py  test_semantic_embedder.py  test_store.py  test_textnorm.py  test_watcher.py
