[project]
name = "rag-pgvector"
version = "1.4.0"
description = "RAG service on FastAPI + Postgres/pgvector: swappable embedding/LLM backends, hybrid search, inline citations, evals."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2",
    "httpx>=0.27,<1.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "snowballstemmer>=3.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

# Application project, not a distributable package: uv locks deps without building.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_ignores = true
